src/terminal/snapshots/mrk__terminal__tests__a_double_height_title_writes_each_line_as_its_two_halves_at_half_the_margin.snap
---
source: src/terminal/mod.rs
expression: "readable(&ansi(&jumbo_sample(Some(JumboTitle::DoubleHeight)), &capabilities,\n5))"
---
␛#3  ␛[1;38;2;197;148;247mBig title␛[0m
␛#4  ␛[1;38;2;197;148;247mBig title␛[0m
     ␛[38;2;62;68;85m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━␛[0m

     ␛[38;2;212;215;224mText␛[0m
