src/terminal/snapshots/mrk__terminal__tests__without_a_jumbo_title_the_heading_is_one_row.snap
---
source: src/terminal/mod.rs
expression: "readable(&ansi(&jumbo_sample(None),\n&capabilities(ColorDepth::TrueColor, None), 5))"
---
     ␛[1;38;2;197;148;247mBig title␛[0m
     ␛[38;2;62;68;85m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━␛[0m

     ␛[38;2;212;215;224mText␛[0m
